fix(topbar): Conserta z-index

--- a/front-end/style.css
+++ b/front-end/style.css
@@ -225,7 +225,7 @@ button:active {
     align-items: center;
     position: fixed;
     top: 0;
-    z-index: 1001;
+    z-index: 1000;
     border-radius: 8px;
 }
 
